fix: Letter-spacing stat block

--- a/styles/main.css
+++ b/styles/main.css
@@ -437,6 +437,7 @@ main {
             font-family: 'SF-Pro', sans-serif;
             font-style: normal;
             font-weight: 400;
+            letter-spacing: -0.559px;
             color: rgba(17, 17, 17, 0.8);
 
             &:nth-child(2) {
